--- a/templates/home.html
+++ b/templates/home.html
@@ -1,36 +1,59 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon.ico') }}">
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon.ico') }}" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"
-        integrity="sha256-bQmrZe4yPnQrLTY+1gYylfNMBuGfnT/HKsCGX+9Xuqo=" crossorigin="anonymous">
-        </script>
+        integrity="sha256-bQmrZe4yPnQrLTY+1gYylfNMBuGfnT/HKsCGX+9Xuqo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"
         integrity="sha256-usTqAE1ywvdMtksWzdeWzD75MsfJN0h0U7y2NtZL3N0=" crossorigin="anonymous"></script>
-    <script id="address-template" type="text/x-handlebars-template">
-
-        {% raw -%}
-            <h4>{{ name }}</h4>
-            <small class="text-muted">{{ time }}</small>
-            <p>{{ message }}</p>
-        {%- endraw %}
-
+    <script id="message-template" type="text/x-handlebars-template">
+            {% raw -%}
+            <h4>
+                {{name}}
+            </h4>
+            <small class="text-muted">
+                {{time}}
+            </small>
+            <p>
+                {{message}}
+            </p>
+            {%- endraw %}
+    </script>
+    <script id="chat-history" type="text/x-handlebars-template">
+            {% raw -%}
+            {{#each chats}}
+                <p>
+                    {{this.name}}
+                </p>
+                <small class="text-muted">
+                    {{this.time}}
+                </small>
+                <p>
+                    {{this.message}}
+                </p>
+            {{/each}}
+            {%- endraw %}
+    </script>
+    <script id="new-room" type="text/x-handlebars-template">
+            {% raw -%}
+            <li>
+                {{room_name}}
+            </li>
+            {%- endraw %}
     </script>
     <script>
-
-        if (!localStorage.getItem('name')) {
-            window.location.href = '/get_name';
+        if (!localStorage.getItem("name")) {
+            window.location.href = "/sign_in";
         }
-
     </script>
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 
@@ -38,76 +61,88 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-md navbar-light bg-light border custom-nav">
+        <a class="navbar-brand" href="#">
+            <span style="color: yellow;">FLACK</span>
+        </a>
+        <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+            data-target="#navbar" data-toggle="collapse" type="button">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar">
+            <ul class="navbar-nav ml-auto mt-2">
+                <li class="nav-item"><a class="nav-link" href="#">Demo</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Log In/Out</a></li>
+            </ul>
+        </div>
+    </nav>
 
-    <h1 class="text-center" id="greeting"></h1>
+    <div id="main-area">
+        <div id="left-side">
+            <div id="user-info">
+                <p id="username"><i class="fas fa-circle"></i></p>
+            </div>
+            <div id="rooms">
+                <p id="channels-header">
+                    Channels
+                    <span id="create-room" data-toggle="modal" data-target="#create-room-form">
+                        <i class="fas fa-plus"></i>
+                    </span>
+                </p>
+                <ul id="rooms-list">
+                    {% for room in rooms %}
+                    <li>{{ room }}</li>
+                    {% endfor %}
+                </ul>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-3">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#create-room-form">New
-                    channel</button>
+                <!-- New room form -->
+                <form id="new-room-form">
+                    <div class="modal fade" id="create-room-form" tabindex="-1" role="dialog"
+                        aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="new-room-form-header">
+                                        Create channel
+                                    </h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                    <br />
+                                </div>
+                                <div class="modal-body">
+                                    <p style="color: red; display: none;" id="room-error" class="text-center">
+                                        Channel already exists!
+                                    </p>
 
-                <!-- Create room form -->
-                <div class="modal fade" id="create-room-form" tabindex="-1" role="dialog"
-                    aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Create channel</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                                <br>
-                            </div>
-                            <div class="modal-body">
-                                <p style="color: red; display: none;" id="room-error" class="text-center">Channel
-                                    already exists!</p>
-                                <form id="new-room-form">
                                     <div class="form-group">
                                         <label for="room-name" class="col-form-label">Name:</label>
                                         <input type="text" class="form-control" id="room-name"
-                                            placeholder="e.g. #marketing" autocomplete="off">
+                                            placeholder="e.g. #marketing" autocomplete="off" autofocus />
                                     </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" id="close-button"
+                                        data-dismiss="modal">
+                                        Close
+                                    </button>
+                                    <button type="submit" class="btn btn-primary">
+                                        Create
+                                    </button>
+                                </div>
                             </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" id="close-button"
-                                    data-dismiss="modal">Close</button>
-                                <button type="submit" class="btn btn-primary">Create</button>
-                            </div>
-                            </form>
-
-
                         </div>
                     </div>
-                </div>
-
-                <!-- List of rooms -->
-                <div>
-                    <h5>Channels list</h5>
-                    <ul id="rooms-list">
-                        {% for room in rooms %}
-                        <li class="rooms">{{ room }}</li>
-                        {% endfor %}
-                    </ul>
-                </div>
+                </form>
             </div>
-            <div class="col-sm-9">
-                <div id="chat-input">
-                    <textarea class="form-control" id="message" rows="3" placeholder="Write something"></textarea>
-                    <button type="button" class="btn btn-primary" id="send-button">Send</button>
-                </div>
-                <hr>
-
-                <!-- Display messages -->
-                <div id="chat-messages">
-
-                    {% for chat in chats %}
-                    <h4>{{ chat["name"] }}</h4>
-                    <small class="text-muted">{{ chat["time"] }}</small>
-                    <p>{{ chat["message"] }}</p>
-                    {% endfor %}
-
-                </div>
+        </div>
+        <div id="right-side">
+            <div id="chat-header"></div>
+            <hr>
+            <div id="message-area">
+            </div>
+            <div id="input-area">
+                <textarea class="form-control" id="message" rows="3" placeholder="Write something"></textarea>
             </div>
         </div>
     </div>
@@ -123,6 +158,20 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/8ad34e41bd.js" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function () {
+            // Clear previous room name or any error messages while creating new rooms
+            $("#create-room-form").on("show.bs.modal", function (event) {
+                document.querySelector("#room-error").style.display = "none";
+                document.querySelector("#room-name").value = "";
+            });
+
+            $("#create-room-form").on("shown.bs.modal", function () {
+                $("#room-name").trigger("focus");
+            });
+        });
+    </script>
 </body>
 
 </html>
