--- a/static/css/style.css
+++ b/static/css/style.css
@@ -95,17 +95,70 @@ nav .navbar-brand {
   padding: 20px;
 }
 
+#right-side #chat-header p {
+  font-weight: bold;
+}
+
 #right-side #message-area {
   width: 100%;
-  height: calc(100vh - 253px);
-  background-color: yellow;
+  height: calc( 100vh - ( 74px + 28px + 161px ));
   overflow-y: auto;
+  padding: 15px 0 0 15px;
+}
+
+#right-side .message-block {
+  display: block;
+  overflow: hidden;
+  margin-bottom: 15px;
+}
+
+#right-side .message-block p {
+  margin-bottom: 0;
+}
+
+#right-side .message-block .username {
+  font-weight: bold;
+  line-height: 15px;
+}
+
+#right-side .chat-left {
+  float: left;
+  margin-right: 10px;
+}
+
+#right-side .chat-left img {
+  width: 30px;
+  height: 30px;
+}
+
+#right-side .chat-right {
+  overflow: hidden;
 }
 
 #create-room {
   margin-left: 130px;
   color: #fffafa;
   cursor: pointer;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 @media (max-width: 599px) {
