--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -47,8 +47,7 @@
         <!-- Navbar -->
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav ml-auto mt-2">
-                <li class="nav-item"><a class="nav-link" href="#">Demo</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Log In/Out</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">View code</a></li>
             </ul>
         </div>
     </nav>
