--- a/templates/home.html
+++ b/templates/home.html
@@ -81,7 +81,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav ml-auto mt-2">
-                <li class="nav-item"><a class="nav-link" href="#">View code</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://github.com/minhajul-karim/flack">View code</a>
+                </li>
                 <li class="nav-item"><a class="nav-link" href="#" id="logout">Log Out</a></li>
             </ul>
         </div>
@@ -101,7 +102,7 @@
                 </p>
                 <ul id="rooms-list">
                     {% for room in rooms %}
-                    <li>{{ room }}</li>
+                    <li class="room">{{ room }}</li>
                     {% endfor %}
                 </ul>
 
@@ -150,7 +151,8 @@
             <div id="chat-header"></div>
             <div id="message-area"></div>
             <div id="input-area">
-                <textarea class="form-control" id="message" rows="3" placeholder="Write message..."></textarea>
+                <textarea class="form-control" id="message" rows="3" placeholder="Write message..."
+                    autofocus></textarea>
             </div>
         </div>
     </div>
