Multi-line message support with Shift+Enter

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -106,9 +106,13 @@ nav .navbar-brand {
   font-weight: bold;
 }
 
+#right-side .chat-message {
+  white-space: pre-wrap;
+}
+
 #right-side #message-area {
   width: 100%;
-  height: calc( 100vh - ( 74px + 28px + 161px ));
+  height: calc( 100vh - ( 74px + 28px + 176px ));
   overflow-y: auto;
   padding: 15px 0 0 15px;
 }
@@ -140,6 +144,12 @@ nav .navbar-brand {
 
 #right-side .chat-right {
   overflow: hidden;
+}
+
+#right-side #multiline-instruction {
+  float: right;
+  display: none;
+  margin: 5px 10px 0 0;
 }
 
 #create-room {
