--- a/templates/home.html
+++ b/templates/home.html
@@ -47,9 +47,7 @@
             <div id="rooms">
                 <p id="channels-header">
                     Channels
-                    <span id="create-room" data-toggle="modal" data-target="#create-room-form">
-                        <i class="fas fa-plus"></i>
-                    </span>
+                    <i class="fas fa-plus" data-toggle="modal" data-target="#create-room-form"></i>
                 </p>
                 <ul id="rooms-list">
                     {% for room in rooms %}
