--- a/templates/home.html
+++ b/templates/home.html
@@ -23,18 +23,19 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light border custom-nav">
-        <a class="navbar-brand" href="#">
-            <span style="color: yellow;">FLACK</span>
-        </a>
+        <!-- Logo -->
+        <p class="navbar-brand">FLACK</p>
+        <!-- Hamburger icon -->
         <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
             data-target="#navbar" data-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
+        <!-- Navbar -->
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav ml-auto mt-2">
                 <li class="nav-item"><a class="nav-link" href="https://github.com/minhajul-karim/flack">View code</a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="#" id="logout">Log Out</a></li>
+                <li class="nav-item"><a class="nav-link" href="" id="logout">Log Out</a></li>
             </ul>
         </div>
     </nav>
