--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -36,9 +36,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light border custom-nav">
         <!-- Logo -->
-        <a class="navbar-brand" href="#">
-            <span style="color: yellow;">FLACK</span>
-        </a>
+        <p class="navbar-brand">FLACK</p>
         <!-- Hamburger icon -->
         <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
             data-target="#navbar" data-toggle="collapse" type="button">
