--- a/templates/home.html
+++ b/templates/home.html
@@ -96,13 +96,17 @@
                     </div>
                 </form>
             </div>
+            <div id="test">
+                <img id="output">
+            </div>
         </div>
         <div id="right-side">
             <div id="chat-header"></div>
             <div id="message-area"></div>
             <div id="input-area">
+                <input type="file" name="" id="file-selector">
                 <textarea class="form-control" id="message" rows="3" placeholder="Write message..."
-                    autofocus></textarea>
+                    style="resize: none;"></textarea>
                 <small id="multiline-instruction"><span class="font-weight-bold">Return</span> to
                     send.<span class="font-weight-bold">&nbsp;&nbsp;&nbsp;Shift + Return</span> to add a new
                     line</small>
