--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,7 +40,7 @@ nav .navbar-brand {
 
 #left-side {
   background-color: #3f0e40;
-  height: calc(100vh - 74px);
+  height: calc(100vh - 73.27px);
   width: 260px;
   float: left;
   color: #fffafa;
@@ -117,7 +117,7 @@ nav .navbar-brand {
 
 #right-side #message-area {
   width: 100%;
-  height: calc( 100vh - ( 74px + 28px + 176px ));
+  height: calc( 100vh - ( 74px + 28px + 83.89px + 37.44px + 120px ));
   overflow-y: auto;
   padding: 15px 0 0 15px;
 }
@@ -151,14 +151,50 @@ nav .navbar-brand {
   overflow: hidden;
 }
 
-#right-side #message {
+#right-side .form-control:focus {
+  border-color: #ced4da !important;
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+#right-side #writing-area {
+  position: relative;
+}
+
+#right-side #icons-area {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  border: 1px solid #ced4da;
+  border-radius: 0 0 5px 5px;
+}
+
+#right-side #icons-area .text-footer {
+  float: right;
+}
+
+#right-side #icons-area #file-selector {
+  display: none;
+}
+
+#right-side #icons-area i {
+  font-size: 30px;
+  margin-right: 20px;
+  margin-top: 10px;
+  color: #007bff;
+}
+
+#right-side textarea {
   resize: none;
+  border-bottom: 0 !important;
+  border-radius: 5px 5px 0 0 !important;
+  outline: none !important;
 }
 
 #right-side #multiline-instruction {
-  float: right;
-  display: none;
-  margin: 5px 10px 0 0;
+  margin: 10px 10% 0 0;
 }
 
 /* width */
