--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -2,211 +2,265 @@ ul,
 li,
 body,
 p {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
+// Navbar background color
 .bg-light {
-    background-color: #350d36 !important;
-    border: 0px !important;
+  background-color: #350d36 !important;
+  border: 0px !important;
 }
 
+// Logo
 nav .navbar-brand {
-    color: #fff !important;
-    font-size: xx-large;
+  color: #fff !important;
+  font-size: xx-large;
 }
 
 .navbar .nav-link {
-    color: #fff !important;
+  color: #fff !important;
 }
 
 .navbar .nav-link:hover {
-    color: #ecf0f1 !important;
+  color: #ecf0f1 !important;
 }
 
 // Sing up
 #signup-area {
-    text-align: center;
+  text-align: center;
 
-    .form-control {
-        display: inline-block;
-        width: 300px;
-    }
+  .form-control {
+    display: inline-block;
+    width: 300px;
+  }
 }
 
 // Chat page
 #chat-page {
-    max-width: 100% !important;
+  max-width: 100% !important;
 }
 
+// Room info
 $left_side_width: 260px;
 #left-side {
-    background-color: #3f0e40;
-    height: calc(100vh - 74px);
-    width: $left_side_width;
-    float: left;
-    color: #fffafa;
+  background-color: #3f0e40;
+  height: calc(100vh - 73.27px);
+  width: $left_side_width;
+  float: left;
+  color: #fffafa;
 
-    .fa-circle {
-        font-size: 10px;
-        color: #2bac76;
-        margin-right: 5px;
-    }
+  // Active status icon
+  .fa-circle {
+    font-size: 10px;
+    color: #2bac76;
+    margin-right: 5px;
+  }
 
-    #user-info {
-        padding: 20px;
-    }
+  // Username
+  #user-info {
+    padding: 20px;
+  }
 
-    #channels-header {
-        margin-left: 20px;
-        .fa-plus {
-            color: #fff;
-            font-size: 15px;
-            margin-left: 130px;
-            cursor: pointer;
-        }
-    }
+  #channels-header {
+    margin-left: 20px;
 
-    #rooms p {
-        font-weight: bold;
+    // Add channel icon
+    .fa-plus {
+      color: #fff;
+      font-size: 15px;
+      margin-left: 130px;
+      cursor: pointer;
     }
+  }
 
-    #rooms-list {
-        width: 100%;
-    }
+  #rooms p {
+    font-weight: bold;
+  }
 
-    #rooms-list li {
-        padding: 5px 20px;
-        cursor: pointer;
-    }
+  #rooms-list {
+    width: 100%;
 
-    #rooms-list li.active:hover {
-        background-color: #007bff;
+    li {
+      padding: 5px 20px;
+      cursor: pointer;
     }
+  }
 
-    #rooms-list li:hover {
-        background-color: #350d36;
-    }
+  #rooms-list li.active:hover {
+    background-color: #007bff;
+  }
 
-    .active {
-        background-color: #007bff;
-    }
+  #rooms-list li:hover {
+    background-color: #350d36;
+  }
 
-    #new-room-form {
-        h5 {
-            color: #000;
-        }
-        p {
-            font-weight: normal;
-        }
+  // Class for active room
+  .active {
+    background-color: #007bff;
+  }
+
+  // Form to create new room
+  #new-room-form {
+    h5 {
+      color: #000;
     }
+    p {
+      font-weight: normal;
+    }
+  }
 }
 
+// Chat messages
 $nav_height: 74px;
 $room_header_height: 28px;
-$textarea_height: 86px;
+$textarea_height: 83.89px;
+$icons_height: 37.44px;
 
 #right-side {
-    width: calc(100% - #{$left_side_width});
-    height: calc(100vh - #{$nav_height});
-    float: right;
-    padding: 20px;
+  width: calc(100% - #{$left_side_width});
+  height: calc(100vh - #{$nav_height});
+  float: right;
+  padding: 20px;
 
-    #chat-header p {
-        font-weight: bold;
+  // Room header
+  #chat-header p {
+    font-weight: bold;
+  }
+
+  .chat-message {
+    white-space: pre-wrap;
+  }
+
+  // Area to display messages
+  #message-area {
+    width: 100%;
+    height: calc(
+      100vh -
+        (
+          #{$nav_height} + #{$room_header_height} + #{$textarea_height} + #{$icons_height} +
+            120px
+        )
+    );
+    overflow-y: auto;
+    padding: 15px 0 0 15px;
+  }
+
+  // Area to contain each messages
+  .message-block {
+    display: block;
+    overflow: hidden;
+    margin-bottom: 15px;
+    p {
+      margin-bottom: 0;
+    }
+    .username {
+      font-weight: bold;
+      line-height: 15px;
+    }
+  }
+
+  // User image
+  .chat-left {
+    float: left;
+    margin-right: 10px;
+    img {
+      width: 30px;
+      height: 30px;
+    }
+  }
+
+  // Chat message
+  .chat-right {
+    overflow: hidden;
+  }
+
+  // Disable outline of textarea
+  .form-control:focus {
+    border-color: #ced4da !important;
+    outline: none;
+    box-shadow: none;
+  }
+
+  // Area to write messagges
+  #writing-area {
+    position: relative;
+  }
+
+  #icons-area {
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    border: 1px solid #ced4da;
+    border-radius: 0 0 5px 5px;
+
+    .text-footer {
+      float: right;
     }
 
-    .chat-message {
-        white-space: pre-wrap;
+    #file-selector {
+      display: none;
     }
 
-    #message-area {
-        width: 100%;
-        height: calc(
-            100vh -
-                (
-                    #{$nav_height} + #{$room_header_height} + #{$textarea_height +
-                        90px}
-                )
-        );
-        // background-color: yellow;
-        overflow-y: auto;
-        padding: 15px 0 0 15px;
+    i {
+      font-size: 30px;
+      margin-right: 20px;
+      margin-top: 10px;
+      color: #007bff;
     }
+  }
 
-    .message-block {
-        display: block;
-        overflow: hidden;
-        p {
-            margin-bottom: 0;
-        }
-        margin-bottom: 15px;
-        .username {
-            font-weight: bold;
-            line-height: 15px;
-        }
-    }
+  textarea {
+    resize: none;
+    border-bottom: 0 !important;
+    border-radius: 5px 5px 0 0 !important;
+    outline: none !important;
+  }
 
-    .chat-left {
-        float: left;
-        margin-right: 10px;
-        img {
-            width: 30px;
-            height: 30px;
-        }
-    }
-
-    .chat-right {
-        overflow: hidden;
-    }
-
-    #message {
-        resize: none;
-    }
-
-    #multiline-instruction {
-        float: right;
-        display: none;
-        margin: 5px 10px 0 0;
-    }
+  #multiline-instruction {
+    // display: none;
+    margin: 10px 10% 0 0;
+  }
 }
 
+// Scrollbar
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+  background: #f1f1f1;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #888;
+  background: #888;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+  background: #555;
 }
 
 $breakpoint-mobile: 599px;
 @media (max-width: $breakpoint-mobile) {
-    #signup-area {
-        .form-control {
-            width: auto;
-        }
+  #signup-area {
+    .form-control {
+      width: auto;
     }
-    $small_left_side_width: 150px;
-    #left-side {
-        width: $small_left_side_width;
-        .fa-plus {
-            margin-left: 25px !important;
-        }
+  }
+  $small_left_side_width: 150px;
+  #left-side {
+    width: $small_left_side_width;
+    .fa-plus {
+      margin-left: 25px !important;
     }
-    #right-side {
-        width: calc(100% - #{$small_left_side_width});
-    }
+  }
+  #right-side {
+    width: calc(100% - #{$small_left_side_width});
+  }
 }
